--- a/frigorificosj/assets/css/style.css
+++ b/frigorificosj/assets/css/style.css
@@ -253,9 +253,9 @@ body {
 }
 
 .introduction img {
-    position: absolute;
+    /*position: absolute;
     top: 0;
-    left: 0;
+    left: 0;*/
 }
 
 .mask {
@@ -275,6 +275,7 @@ body {
     top: 35%;
     display: table;
     margin: 0 auto;
+    text-align: center;
     /*-webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
@@ -290,6 +291,11 @@ body {
     margin-bottom: -15px;
     font-size: 35px;
     font-weight: 700;
+}
+
+.intro-content img {
+    position: relative;
+    width: 50%;
 }
 
 .intro-content span {
@@ -520,7 +526,7 @@ body {
 /* ( a ) Story of Glory */
 
 .profile-page .image-container {
-    background: url(../img/about_us_featured.png);
+    background: url(../img/fsjhistoria_derecha.jpg);
     background-size: cover;
     background-position: bottom;
 }
@@ -642,7 +648,7 @@ body {
 /* ( a ) Portfolio Section */
 
 .portfolio-page .image-container {
-    background: url(../img/portfolio_featured.png);
+    background: url(../img/fsjclientes_derecha.jpg);
     background-size: cover;
     background-position: bottom;
 }
@@ -838,7 +844,7 @@ body {
                     =======================================*/
 
 .service-page .image-container {
-    background: url(../img/service_featured.png);
+    background: url(../img/fsjser7_derecha.jpg);
     background-size: cover;
     background-position: bottom;
 }
@@ -1133,7 +1139,7 @@ body {
 
 
 .contact-page .image-container {
-    background: url(../img/contact_featured.png);
+    background: url(../img/fsjcontacto_portada.jpg);
     background-size: cover;
     background-position: bottom;
 }
@@ -1220,6 +1226,41 @@ input#cfsubmit:hover {
 
 .footer a:hover {
     color: #f4f4f4;
+}
+
+
+
+/* MARQUEE */
+
+/* Make it a marquee */
+.marquee {
+    width: 100%;
+    margin: 0 auto;
+    white-space: nowrap;
+    overflow: hidden;
+    box-sizing: border-box;
+    border: 1px green solid;
+}
+
+.marquee span {
+    display: inline-block;
+    padding-left: 100%;
+    text-indent: 0;
+    animation: marquee 20s linear infinite;
+}
+.marquee span:hover {
+    animation-play-state: paused
+}
+
+/* Make it move */
+@keyframes marquee {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
+}
+
+
+.logo-cliente {
+    max-height: 50px;
 }
 
 /*=============================================
