--- a/supermercado/comprar/templates/content.carrito.html
+++ b/supermercado/comprar/templates/content.carrito.html
@@ -1,7 +1,38 @@
 <div class="container">
-    <br />
-    <br />
-    <br />
-    <br />
-    <h1>Carrito</h1>
-</div>
+	<br />
+    <div class="box">
+        <div class="center gap">
+            <h2>Tu carrito de compras</h2>
+            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>
+        </div><!--/.center-->
+
+        <div class="row">
+    	  	<table class="table table-hover">
+			    <thead>
+			      <tr>
+			      	<th>Producto</th>
+			        <th>Rubro</th>
+			        <th>Unidad de medida (gramos o mm)</th>
+			        <th>Unidades por producto</th>
+			        <th>Editar Cantidad</th>
+			        <th>Eliminar</th>
+			      </tr>
+			    </thead>
+			    <tbody>
+			      <tr ng-repeat="producto in saveCart">
+			        <td>{{producto.descripcion}}</td>
+			        <td>{{producto.rubro}}</td>
+			        <td>{{producto.unidadMedida}}</td>
+			        <td>{{producto.uxb}}</td>
+			        <td style="width: 7%;">
+			        	<input type="number" class="form-control" id="cantidad" value="{{producto.unidades}}">
+  					</td>
+
+  					<td><a ng-click="deleteFromCart($index)"><i class="icon-trash"></i></a></td>
+			      </tr>
+			    </tbody>
+  			</table>
+  			<button class="btn btn-success btn-lg">Enviar</button>
+        </div>   
+    </div><!--/.box-->
+</div><!--/.container-->
