--- a/supermercado/comprar/templates/content.checkout.html
+++ b/supermercado/comprar/templates/content.checkout.html
@@ -1,7 +1,33 @@
 <div class="container">
-    <br />
-    <br />
-    <br />
-    <br />
-    <h1>Checkout</h1>
-</div>
+	<br />
+    <div class="box">
+        <div class="center gap">
+            <h2>Checkout</h2>
+            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>
+        </div><!--/.center-->
+
+        <div class="row">
+        	<div class="col-md-8 col-md-offset-2">
+	        	<form role="form">
+				  <div class="form-group">
+				    <label for="text">Nombre:</label>
+				    <input type="nombre" class="form-control" id="nombre" required>
+				  </div>
+				  <div class="form-group">
+				    <label for="email">Email address:</label>
+				    <input type="email" class="form-control" id="email" required>
+				  </div>
+	  			  <div class="form-group">
+				    <label for="telefono">Teléfono:</label>
+				    <input type="telefono" class="form-control" id="telefono" required>
+				  </div>
+				  <div class="form-group">
+				    <label for="direccion">Dirección:</label>
+				    <input type="direccion" class="form-control" id="direccion" required>
+				  </div>
+				  <button type="submit" class="btn btn-success btn-lg">Enviar pedido</button>
+				</form>
+			</div>
+        </div>   
+    </div><!--/.box-->
+</div><!--/.container-->
