--- a/supermercado/comprar/templates/content.home.html
+++ b/supermercado/comprar/templates/content.home.html
@@ -3,7 +3,7 @@
     <div class="box">
         <div class="center gap">
             <h2>Rubros</h2>
-            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>
+            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba. Agregue productos a su carrito y envienos su pedido. Nos contactaremos con usted para pasarle el precio y confirmar el envio. Gracias!</p>
         </div><!--/.center-->
         <!--
         <ul class="portfolio-filter">
@@ -13,7 +13,7 @@
             <li><a class="btn btn-primary" href="#" data-filter=".wordpress">Wordpress</a></li>
         </ul><!--/#portfolio-filter-->
         <div class="row">
-        <ul class="portfolio-items col-5 isotope">
+        <ul class="portfolio-items col-5">
 
             <li class="portfolio-item" ng-repeat="rubro in rubros">
                 <div class="item-inner">
