--- a/supermercado/comprar/templates/content.buscar.html
+++ b/supermercado/comprar/templates/content.buscar.html
@@ -3,11 +3,25 @@
     <div class="box">
         <div class="center gap">
             <h2>Resultados de "{{searchBuscador}}"</h2>
-            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>
+            <!--<p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>-->
         </div><!--/.center-->
 
         <div class="row">
-    	  	<table class="table table-hover">
+
+        	<!-- Preloader -->
+	        <div class="preloader" ng-show="showPreloader" style="text-align: center;">
+	        	<br />
+	            <img ng-src="theme/images/preloader.GIF" width="24px" height="24px">
+	            <br />
+	            <br />
+	        </div>
+	        <!-- /Preloader -->
+
+	        <div class="center gap" ng-hide="filterProducts.length > 0">
+	            <p class="lead" ng-hide="showPreloader">No se encontraron resultados.</p>
+	        </div><!--/.center-->
+
+    	  	<table class="table table-hover" ng-show="filterProducts.length > 0">
 			    <thead>
 			      <tr>
 			      	<th>Producto</th>
@@ -21,14 +35,14 @@
 			    <tbody>
 			      <tr ng-repeat="producto in filterProducts">
 			        <td>{{producto.descripcion}}</td>
-			        <td>{{producto.rubro}}</td>
+			        <td>{{getRubrofromID(producto.rubro)}}</td>
 			        <td>{{producto.unidadMedida}}</td>
 			        <td>{{producto.uxb}}</td>
 			        <td style="width: 7%;">
 			        	<input type="number" class="form-control" id="cantidad{{producto.id}}" value="1">
   					</td>
 
-  					<td><a ng-click="buyProduct(producto.id)"><i class="icon-shopping-cart" ></i></a></td>
+  					<td><a ng-click="buyProduct(producto.id)" data-toggle="modal" data-target="#modalAddToCart"><i class="icon-shopping-cart addToCart" ></i></a></td>
 			      </tr>
 			    </tbody>
   			</table>
