--- a/supermercado/comprar/templates/content.checkout.html
+++ b/supermercado/comprar/templates/content.checkout.html
@@ -8,23 +8,26 @@
 
         <div class="row">
         	<div class="col-md-8 col-md-offset-2">
-	        	<form role="form">
+	        	<form role="form" ng-submit="sendPedido()" method="post">
 				  <div class="form-group">
 				    <label for="text">Nombre:</label>
-				    <input type="nombre" class="form-control" id="nombre" required>
+				    <input type="nombre" class="form-control" id="nameForm" name="nameForm" required>
 				  </div>
 				  <div class="form-group">
 				    <label for="email">Email address:</label>
-				    <input type="email" class="form-control" id="email" required>
+				    <input type="email" class="form-control" id="emailForm" name="emailForm" required>
 				  </div>
 	  			  <div class="form-group">
 				    <label for="telefono">Teléfono:</label>
-				    <input type="telefono" class="form-control" id="telefono" required>
+				    <input type="telefono" class="form-control" id="telForm" name="telForm" required>
 				  </div>
 				  <div class="form-group">
 				    <label for="direccion">Dirección:</label>
-				    <input type="direccion" class="form-control" id="direccion" required>
+				    <input type="direccion" class="form-control" id="direcForm" name="direcForm" required>
 				  </div>
+
+				  <input type="hidden" id="pedidoForm" name="pedidoForm">
+
 				  <button type="submit" class="btn btn-success btn-lg">Enviar pedido</button>
 				</form>
 			</div>
