--- a/supermercado/comprar/templates/content.rubro.detail.html
+++ b/supermercado/comprar/templates/content.rubro.detail.html
@@ -2,12 +2,22 @@
 	<br />
     <div class="box">
         <div class="center gap">
-            <h2>Rubro {{idRubro}}</h2>
-            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>
+            <h2>Rubro {{nameRubro}}</h2>
+            <!--<p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>-->
         </div><!--/.center-->
 
         <div class="row">
-    	  	<table class="table table-hover">
+
+        	<!-- Preloader -->
+	        <div class="preloader" ng-show="showPreloader" style="text-align: center;">
+	        	<br />
+	            <img ng-src="theme/images/preloader.GIF" width="24px" height="24px">
+	            <br />
+	            <br />
+	        </div>
+	        <!-- /Preloader -->
+
+    	  	<table class="table table-hover" ng-show="productos.length > 0">
 			    <thead>
 			      <tr>
 			        <th>Producto</th>
@@ -26,7 +36,7 @@
 			        	<input type="number" class="form-control" id="cantidad{{producto.id}}" value="1">
   					</td>
 
-  					<td><a ng-click="buyProduct(producto.id)"><i class="icon-shopping-cart" ></i></a></td>
+  					<td><a ng-click="buyProduct(producto.id)" data-toggle="modal" data-target="#modalAddToCart"><i class="icon-shopping-cart addToCart" ></i></a></td>
 			      </tr>
 			    </tbody>
   			</table>
