--- a/supermercado/comprar/templates/content.checkout.html
+++ b/supermercado/comprar/templates/content.checkout.html
@@ -8,7 +8,7 @@
 
         <div class="row">
         	<div class="col-md-8 col-md-offset-2">
-	        	<form role="form" ng-submit="sendPedido()" method="post">
+	        	<form role="form" ng-submit="sendPedido()" method="post" action="contacto.php">
 				  <div class="form-group">
 				    <label for="text">Nombre:</label>
 				    <input type="nombre" class="form-control" id="nameForm" name="nameForm" required>
