--- a/supermercado/comprar/templates/content.home.html
+++ b/supermercado/comprar/templates/content.home.html
@@ -3,7 +3,7 @@
     <div class="box">
         <div class="center gap">
             <h2>Rubros</h2>
-            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba. Agregue productos a su carrito y envienos su pedido. Nos contactaremos con usted para pasarle el precio y confirmar el envio. Gracias!</p>
+            <p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba. Agregue productos a su carrito y envíenos su pedido. Nos contactaremos con usted para pasarle el precio y confirmar el envío. Gracias!</p>
         </div><!--/.center-->
         <!--
         <ul class="portfolio-filter">
@@ -16,7 +16,8 @@
         <ul class="portfolio-items col-5">
 
             <li class="portfolio-item" ng-repeat="rubro in rubros">
-                <div class="item-inner">
+                <!--<div class="item-inner" ng-click="goToRubro({{rubro.id}})">-->
+                <div class="item-inner" >
                     <div class="portfolio-image">
                         <img src="theme/images/portfolio/thumb/item{{rubro.id}}.jpg" alt="">
                         <div class="overlay">
