--- a/supermercado/comprar/templates/content.carrito.html
+++ b/supermercado/comprar/templates/content.carrito.html
@@ -3,7 +3,7 @@
     <div class="box">
         <div class="center gap">
             <h2>Tu carrito de compras</h2>
-            <p class="lead">Cuado haya terminado, oprima "Enviar". Deberá completar un formulario para que nos contactaremos con usted. De esta forma, pasaremos el precio y confirmaremos el envio de su pedido. Gracias!</p>
+            <p class="lead">Cuado haya terminado, oprima "Enviar". Deberá completar un formulario para que nos contactaremos con usted. De esta forma, pasaremos el precio y confirmaremos el envio de su pedido. Gracias por su compra!</p>
         </div><!--/.center-->
 
         <div class="row">
@@ -18,7 +18,7 @@
 			      	<th>Producto</th>
 			        <th>Rubro</th>
 			        <th>Unidad de medida (gramos o mm)</th>
-			        <th>Unidades por producto</th>
+			        <!--<th>Unidades por producto</th>-->
 			        <th>Editar Cantidad</th>
 			        <th>Actualizar cantidad</th>
 			        <th>Eliminar</th>
@@ -29,7 +29,7 @@
 			        <td>{{producto.descripcion}}</td>
 			        <td>{{getRubrofromID(producto.rubro)}}</td>
 			        <td>{{producto.unidadMedida}}</td>
-			        <td>{{producto.uxb}}</td>
+			        <!--<td>{{producto.uxb}}</td>-->
 			        <td style="width: 7%;">
 			        	<input type="number" class="form-control" id="cantidad{{$index}}" ng-value="{{producto.unidades}}">
   					</td>
