--- a/supermercado/comprar/templates/content.rubro.detail.html
+++ b/supermercado/comprar/templates/content.rubro.detail.html
@@ -2,7 +2,10 @@
 	<br />
     <div class="box">
         <div class="center gap">
-            <h2>Rubro {{nameRubro}}</h2>
+        	<p class="lead" style="float:left;margin-top: 20px;margin-bottom: 0px;margin-left: 15px; color: #999;"><a href="#/" style="color: #999;"><i class="icon-arrow-left" ></i></a></p>
+        	<p class="lead" style="float: right;margin-top: 20px;margin-bottom: 0px;margin-left: 15px; color: #999;">¿Alguna duda? Llámenos al (0264) 4227221<p>
+            <br style="clear:both" />
+            <h2 style="margin-bottom: -10; margin-bottom: -10; margin-bottom: 0px; clear: both">Rubro {{nameRubro}}</h2>
             <!--<p class="lead">Seleccione el rubro para filtrar los productos o busque un producto por nombre en el buscador de arriba.</p>-->
         </div><!--/.center-->
 
@@ -22,7 +25,7 @@
 			      <tr>
 			        <th>Producto</th>
 			        <th>Unidad de medida (gramos o mm)</th>
-			        <th>Unidades por producto</th>
+			        <!--<th>Unidades por producto</th>-->
 			        <th>Cantidad</th>
 			        <th>Comprar</th>
 			      </tr>
@@ -31,7 +34,7 @@
 			      <tr ng-repeat="producto in productos">
 			        <td>{{producto.descripcion}}</td>
 			        <td>{{producto.unidadMedida}}</td>
-			        <td>{{producto.uxb}}</td>
+			        <!--<td>{{producto.uxb}}</td>-->
 			        <td style="width: 7%;">
 			        	<input type="number" class="form-control" id="cantidad{{producto.id}}" value="1">
   					</td>
