--- a/frigorificosj/assets/css/style.css
+++ b/frigorificosj/assets/css/style.css
@@ -323,7 +323,7 @@ body {
 
 .social-media {
     font-size: 25px;
-    margin-top: 150px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -1216,6 +1216,7 @@ input#cfsubmit:hover {
 .footer .copyright {
     color: #fff;
     float: left;
+    padding-top: 5px; 
 }
 .footer .author {
     float: right;
